--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "body-parser": "^1.18.2",
     "convert-radix64": "^0.2.0",
     "cors": "^2.8.4",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongoose": "^5.0.15",
+    "shortid": "^2.2.8",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
